added unordered list in html, added states in js

--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
   <body>
     <header>
       <h1>Christian Miller</h1>
-      <p></p>
     </header>
 
     <main>
       <h2>Projects</h2>
       <img src="http:placehold.it/200x200">
       <img src="http:placehold.it/200x200">
+      <p>Here's a list of some of my favorite hip hop albums, in no particular order.</p>
+      <ul>
+        <li>4eva is a Mighty Long Time</li>
+        <li>good kid, m.A.A.d city</li>
+        <li>Channel ORANGE</li>
+        <li>Man on the Moon</li>
+        <li>Rodeo</li>
+        <li>No Ceilings</li>
+        <li>Late Registration</li>
+        <li>ALL-AMERIKKKAN BADA$$</li>
+        <li>Pinata</li>
+        <li>The Marshall Mathers LP</li>
     </main>
     <script src="app.js"></script>
   </body>
