--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
         <li>ALL-AMERIKKKAN BADA$$</li>
         <li>Pinata</li>
         <li>The Marshall Mathers LP</li>
+      </ul>
+      <p>Here's a list of my top ten favorite people!</p>
+      <ol>
+        <li>My mother</li>
+        <li>My grandmother</li>
+        <li>My best friend Isabella</li>
+        <li>Karim Piottin</li>
+        <li>Alex Sloan</li>
+        <li>Katie Gould</li>
+        <li>Lexi Anthony</li>
+        <li>My dog Duke</li>
+        <li>My cat Marco</li>
+        <li>Logan Lukasik</li>
+      </ol>
     </main>
     <script src="app.js"></script>
   </body>
