did some css stuff, looks like trash tho

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </header>
 
     <main>
-      <h2>Projects</h2>
+      <h2>Dope Pictures</h2>
       <img src="http:placehold.it/200x200">
       <img src="http:placehold.it/200x200">
       <p>Here's a list of some of my favorite hip hop albums, in no particular order.</p>
